--- a/src/assets/scss/argon-design-system/modal.scss
+++ b/src/assets/scss/argon-design-system/modal.scss
@@ -6,6 +6,19 @@
         border-radius: 0;
     }  
 }
+.modal-backdrop-new {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1040;
+    width: 100vw;
+    height: 100vh;
+    background-color: #000; }
+    .modal-backdrop.fade {
+      opacity: 0; }
+    .modal-backdrop.show {
+      opacity: 0.90; 
+    }
 
 
 .modal-fluid {
